# Font-Size-Generator

./: .travis.yml  .travis.yml.txt  CMakeLists.txt  README.md  initial_data.cpp  initial_data_test.cpp  main.cpp
Readme/: README.md
cmake/: compilers_flags_helper_functions.cmake
lib/: CMakeLists.txt  initial_data.cpp  initial_data.h
test_code/: main.cpp
tests/: CMakeLists.txt  font_controller_test.cpp  font_size_calculator_test.cpp  font_size_generator_test.cpp  initial_data_test.cpp  initial_widget_data_test.cpp
tests/src/: font_controller_test.cpp  font_controller_test.h  initial_data_test.cpp  initial_data_test.h
